Heading and other fixes
- fix: headings not looking good with module icon
- fix: module images being too long
- fix: remove unnecessary html containers
- fix: remove inline css
- fix: change loading text to german equivelant
- style: change the text cursor of badges to default cursor
- style: cleaned up some unnecessary code

--- a/src/Templates/Styles/style.css
+++ b/src/Templates/Styles/style.css
@@ -9,6 +9,14 @@
     --colourPrimary: #007bff;
     --colourPrimaryLight: #66b0f7;
     --colourLight: #777;
+    --colourBorder: #d9d9d9;
+    --colourBorderLight: #f4f4f4;
+
+    /**
+     * Apply bootstrap colour
+     */
+    --colourGreen: var(--green);
+    --colourOrange: var(--orange);
 
     --radiusDefault: 4px;
 
@@ -69,6 +77,10 @@ h1 {
 
 section {
     margin: 4em 0;
+}
+
+.badge {
+    cursor: default;
 }
 
 
@@ -327,24 +339,6 @@ section {
     text-decoration: underline;
 }
 
-.moduleinfo h1 {
-    font-weight: normal;
-    margin-bottom: var(--gutterDefault);
-}
-
-.module-listing h1 {
-    font-weight: normal;
-    border-bottom: 1px solid #cccccc;
-    font-size: 2em;
-}
-
-.module-listing h2 {
-    font-weight: normal;
-    font-size: 1.5em;
-    margin-bottom: var(--gutterDefault);
-    margin-top: var(--gutterDefault);
-}
-
 .module-listing .search {
     margin-bottom: 25px;
 }
@@ -356,46 +350,50 @@ section {
     border: 1px solid #cccccc;
 }
 
-.content .moduleinfo .moduleinfo-row {
+.content .module-title {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+}
+
+.content .module-title img {
+    margin: 0.4rem 0.8rem 0.4rem 0.4rem;
+    height: 4rem;
+}
+
+.content .moduleinfo-row {
     padding-bottom: var(--paddingDefault);
     border-bottom: 1px solid #cccccc;
     margin-bottom: var(--gutterDefault);
 }
 
-.content .moduleinfo .moduleinfo-row .info-heading {
+.content .moduleinfo-row .info-heading {
     display: inline-block;
     font-weight: bold;
     width: 300px;
     float: left;
 }
 
-.content .moduleinfo .moduleinfo-row .info-body {
+.content .moduleinfo-row .info-body {
     padding-left: 300px;
 }
 
-.content .moduleinfo .moduleinfo-images {
+.content .moduleinfo-images {
     padding-bottom: var(--paddingDefault);
 }
 
-.content .moduleinfo .moduleinfo-images img {
-    -width: 300px;
+.content .moduleinfo-images img {
     width: 100%;
+    max-height: 128px;
     border: 1px solid #cccccc;
 }
 
-.content .moduleinfo .module-icon img {
-    float: left;
-    margin-right: 10px;
-    height: 32px;
-    margin-top: 8px
-}
-
-.moduleinfo .button {
+.content .button {
     margin: 0px;
     margin-right: 10px;
 }
 
-.content .moduleinfo .moduleinfo-buttons {
+.content .moduleinfo-buttons {
     margin-bottom: var(--gutterDefault);
     padding-bottom: var(--paddingDefault);
     border-bottom: 1px solid #cccccc;
@@ -413,37 +411,16 @@ section {
     font-weight: bold;
 }
 
+/**
+ * Markdown
+ */
 .markdown h1 {
-    border: none;
-}
+    margin: initial;
 
-.markdown h2 {
-    font-weight: normal;
-    margin-top: 60px;
-}
+    font-size: 3rem;
+    text-transform: none;
 
-.markdown h3 {
-    font-weight: normal;
-    margin-top: 40px;
-}
-
-.markdown.changelog h3 {
-    font-weight: bold;
-    margin-top: 16px;
-    font-size: 18px;
-}
-
-.markdown h4 {
-    font-weight: normal;
-    margin-top: var(--gutterDefault);
-}
-
-.markdown hr {
-    margin: 40px 0px 40px;
-    border: none;
-    border-top: 1px dashed #cccccc;
-    height: 0px;
-    background-color: none;
+    opacity: 1;
 }
 
 .markdown table {
